--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     build:
@@ -91,6 +89,8 @@ services:
       - laravel-network
     volumes:
       - rabbitmq-data:/var/lib/rabbitmq
+      - ./docker/rabbitmq/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf:ro
+      - ./docker/rabbitmq/definitions.json:/etc/rabbitmq/definitions.json:ro
 
   localstack:
     image: localstack/localstack:latest
@@ -118,7 +118,7 @@ services:
     container_name: laravel-queue-worker
     restart: unless-stopped
     working_dir: /var/www
-    command: php artisan queue:work rabbitmq --sleep=3 --tries=3 --timeout=300
+    command: php artisan queue:work rabbitmq --verbose --sleep=3 --tries=2 --timeout=300
     volumes:
       - ./:/var/www
     networks:
